--- a/Makefile.am
+++ b/Makefile.am
@@ -36,21 +36,21 @@ TARGETS_COMMON = $(PREFIX1).autobil.bin $(PREFIX2).autobil.bin \
 	echo " ?* " | hfst-regexp2fst > .deps/any-symbol.hfst
 	hfst-concatenate -1 .deps/$(PREFIX1).autobil.upper -2 .deps/any-symbol.hfst -o .deps/$(PREFIX1).autobil.prefixes
 
-#$(PREFIX1).automorf.bin: $(AP_LIB1)/$(LANG1).automorf.att.gz .deps/$(PREFIX1).autobil.prefixes .deps/.d
+#$(PREFIX1).automorf.bin: $(AP_SRC1)/$(LANG1).automorf.att.gz .deps/$(PREFIX1).autobil.prefixes .deps/.d
 #	$(ZCAT) $< | hfst-txt2fst > .deps/$(LANG1).automorf.hfst
 #	hfst-compose-intersect -1 .deps/$(LANG1).automorf.hfst -2 .deps/$(PREFIX1).autobil.prefixes -o .deps/$(PREFIX1).automorf.trimmed
 #	hfst-fst2txt -i .deps/$(PREFIX1).automorf.trimmed -o .deps/$(PREFIX1).automorf.trimmed.att
 #	lt-comp lr .deps/$(PREFIX1).automorf.trimmed.att $@
 
 
-$(PREFIX1).automorf.bin: $(AP_LIB1)/$(LANG1).automorf.att.gz .deps/$(PREFIX1).autobil.prefixes .deps/.d
+$(PREFIX1).automorf.bin: $(AP_SRC1)/$(LANG1).automorf.att.gz .deps/$(PREFIX1).autobil.prefixes .deps/.d
 	$(ZCAT) $< > .deps/$(PREFIX1).automorf.att
 	lt-comp lr .deps/$(PREFIX1).automorf.att $@
 
-# $(PREFIX1).autogen.hfst: $(AP_LIB2)/$(LANG2).autogen.hfst
+# $(PREFIX1).autogen.hfst: $(AP_SRC2)/$(LANG2).autogen.hfst
 # 	cp $< $@
 
-#$(PREFIX1).autogen.bin: $(AP_LIB2)/$(LANG2).autogen.bin
+#$(PREFIX1).autogen.bin: $(AP_SRC2)/$(LANG2).autogen.bin
 #	cp $< $@
 
 ###############################################################################
@@ -79,10 +79,10 @@ $(PREFIX2).autobil.bin: $(BASENAME).$(PREFIX1).dix
 ## Prob files for tagger
 ###############################################################################
 #
-#$(PREFIX1).prob: $(AP_LIB1)/$(LANG1).prob
+#$(PREFIX1).prob: $(AP_SRC1)/$(LANG1).prob
 #	cp $< $@
 #
-#$(PREFIX2).prob: $(AP_LIB2)/$(LANG2).prob
+#$(PREFIX2).prob: $(AP_SRC2)/$(LANG2).prob
 #	cp $< $@
 
 ###############################################################################
